// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly for loading 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    testID="header"
    title="STEPS OF FAITH"
  />
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
      }
    }
  >
    <LoadingGuy />
  </View>
</View>
`;

exports[`renders with no steps 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    testID="header"
    title="STEPS OF FAITH"
  />
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTScrollView
        onScroll={[Function]}
        refreshControl={
          <RefreshControl
            onRefresh={[Function]}
            refreshing={false}
          />
        }
        scrollEventThrottle={16}
        testID="scrollView"
      >
        <RefreshControl
          onRefresh={[Function]}
          refreshing={false}
        />
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/footprints.png",
                }
              }
            />
            <Text
              header={true}
              style={
                Object {
                  "color": "#007398",
                  "fontSize": 42,
                  "paddingTop": 10,
                }
              }
            >
              STEPS OF FAITH
            </Text>
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              You don't have any Steps of Faith.
            </Text>
            <Text
              style={
                Object {
                  "color": "#505256",
                  "fontSize": 16,
                  "textAlign": "center",
                }
              }
            >
              Choose a person and add some new steps.
            </Text>
          </View>
        </View>
      </RCTScrollView>
      <BottomButton
        onPress={[Function]}
        text="Take a Step With Someone"
      />
    </View>
  </View>
</View>
`;

exports[`renders with steps 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Header
    left={
      <IconButton
        name="menuIcon"
        onPress={[Function]}
        type="MissionHub"
      />
    }
    testID="header"
    title="STEPS OF FAITH"
  />
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTScrollView
        onScroll={[Function]}
        refreshControl={
          <RefreshControl
            onRefresh={[Function]}
            refreshing={false}
          />
        }
        scrollEventThrottle={16}
        testID="scrollView"
      >
        <RefreshControl
          onRefresh={[Function]}
          refreshing={false}
        />
        <View>
          <Card
            style={
              Object {
                "backgroundColor": "#ffffff",
                "borderRadius": 0,
                "marginBottom": 5,
                "marginHorizontal": 0,
                "marginVertical": 0,
                "position": "relative",
              }
            }
          >
            <Flex
              align="center"
              justify="center"
              style={
                Object {
                  "padding": 25,
                  "paddingTop": 35,
                }
              }
              value={1}
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../assets/images/footprints.png",
                  }
                }
                style={
                  Object {
                    "height": 60,
                  }
                }
              />
              <Text
                header={true}
                style={
                  Object {
                    "color": "#007398",
                    "fontSize": 42,
                    "paddingTop": 5,
                    "textAlign": "center",
                  }
                }
              >
                Steps of Faith
              </Text>
              <Text
                style={
                  Object {
                    "color": "#505256",
                    "fontSize": 16,
                    "paddingHorizontal": 40,
                    "paddingVertical": 5,
                    "textAlign": "center",
                  }
                }
              >
                Choose a person in People view to add a new step
              </Text>
            </Flex>
            <Flex
              style={
                Object {
                  "position": "absolute",
                  "right": 10,
                  "top": 10,
                }
              }
            >
              <IconButton
                hitSlop={
                  Object {
                    "bottom": 10,
                    "left": 10,
                    "right": 10,
                    "top": 10,
                  }
                }
                name="deleteIcon"
                onPress={[Function]}
                style={
                  Object {
                    "color": "#007398",
                    "fontSize": 12,
                  }
                }
                type="MissionHub"
              />
            </Flex>
          </Card>
          <RCTScrollView
            ListFooterComponent={null}
            data={
              Array [
                Object {
                  "id": 0,
                  "organization": Object {
                    "id": "000",
                  },
                  "receiver": Object {
                    "id": "00",
                  },
                },
                Object {
                  "id": 1,
                  "organization": Object {
                    "id": "111",
                  },
                  "receiver": Object {
                    "id": "11",
                  },
                },
                Object {
                  "id": 2,
                  "organization": Object {
                    "id": "222",
                  },
                  "receiver": Object {
                    "id": "22",
                  },
                },
                Object {
                  "id": 3,
                  "organization": Object {
                    "id": "333",
                  },
                  "receiver": Object {
                    "id": "33",
                  },
                },
              ]
            }
            disableVirtualization={false}
            getItem={[Function]}
            getItemCount={[Function]}
            horizontal={false}
            initialNumToRender={10}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onContentSizeChange={[Function]}
            onEndReachedThreshold={2}
            onLayout={[Function]}
            onMomentumScrollEnd={[Function]}
            onScroll={[Function]}
            onScrollBeginDrag={[Function]}
            onScrollEndDrag={[Function]}
            removeClippedSubviews={false}
            renderItem={[Function]}
            scrollEventThrottle={50}
            showsVerticalScrollIndicator={false}
            stickyHeaderIndices={Array []}
            style={
              Array [
                Object {
                  "backgroundColor": "#ECEEF2",
                  "overflow": "scroll",
                  "paddingBottom": undefined,
                },
                Object {
                  "paddingBottom": 40,
                },
              ]
            }
            updateCellsBatchingPeriod={50}
            viewabilityConfigCallbackPairs={Array []}
            windowSize={21}
          >
            <View>
              <View
                onLayout={[Function]}
                style={null}
              >
                <StepItem
                  onPressName={[Function]}
                  onSelect={[Function]}
                  step={
                    Object {
                      "id": 0,
                      "organization": Object {
                        "id": "000",
                      },
                      "receiver": Object {
                        "id": "00",
                      },
                    }
                  }
                  testID="stepItem0"
                />
              </View>
              <View
                onLayout={[Function]}
                style={null}
              >
                <StepItem
                  onPressName={[Function]}
                  onSelect={[Function]}
                  step={
                    Object {
                      "id": 1,
                      "organization": Object {
                        "id": "111",
                      },
                      "receiver": Object {
                        "id": "11",
                      },
                    }
                  }
                  testID="stepItem1"
                />
              </View>
              <View
                onLayout={[Function]}
                style={null}
              >
                <StepItem
                  onPressName={[Function]}
                  onSelect={[Function]}
                  step={
                    Object {
                      "id": 2,
                      "organization": Object {
                        "id": "222",
                      },
                      "receiver": Object {
                        "id": "22",
                      },
                    }
                  }
                  testID="stepItem2"
                />
              </View>
              <View
                onLayout={[Function]}
                style={null}
              >
                <StepItem
                  onPressName={[Function]}
                  onSelect={[Function]}
                  step={
                    Object {
                      "id": 3,
                      "organization": Object {
                        "id": "333",
                      },
                      "receiver": Object {
                        "id": "33",
                      },
                    }
                  }
                  testID="stepItem3"
                />
              </View>
            </View>
          </RCTScrollView>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;
